# ai-feedback-processing-showcase

./: .gitignore  README.md  pyproject.toml
data/: example-feedback-data.json
src/: db.py  main.py  message_processor_agent.py  tools.py
src/crewai/: main.py  message_processor_agent.py
src/ell/: db.py  main.py  task.py  tools.py
