[project]
name = "customer-feedback-agents"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Christoph Burnicki", email = "christoph@burnicki.net"},
]
dependencies = [
    "tinydb>=4.8.0",
    "crewai[tools]>=0.67.1",
    "langchain>=0.3.4",
    "langchain-community>=0.3.3",
    "langchain-ollama>=0.2.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
crewai_example = "python src/crewai/main.py"
